--- a/css/group.css
+++ b/css/group.css
@@ -1,16 +1,16 @@
 @import url('base.css');
 
-.user-wallpaper {
+.group-wallpaper {
     position: relative;
 }
 
-.user-wallpaper img {
+.group-wallpaper img {
     width: 100%;
     height: 200px;
     object-fit: cover;
 }
 
-.user-avatar {
+.group-avatar {
     position: relative;
     display: flex;
     justify-content: center;
@@ -18,70 +18,61 @@
     margin-bottom: -50px;
 }
 
-.user-avatar img {
+.group-avatar img {
     width: 250px;
     height: 250px;
     object-fit: cover;
     border-radius: 50%;
     border: 5px solid white;
+    
 }
 
-.user-text-data {
+.group-text-data {
     position: static;
+    text-align: center;
+    text-align-last: top;
+    
+}
+
+.group-text-data h2 {
+    margin-bottom: 20px;
 }
 
 @media (min-width: 576px) {
-    .user-wallpaper img {
+    
+    
+    .group-wallpaper img {
         height: 300px;
     }
 
-    .user-avatar {
+    .group-avatar {
         display: block;
         left: auto;
     }
 
-    .user-text-data {
+    .group-text-data {
         position: relative;
         top: -200px;
         left: 125px;
-        margin-bottom: -200px;
+        margin-bottom: -125px;
     }
 }
 
 @media (min-width: 768px) {
-    .user-avatar {
+    .group-avatar {
         left: 100px;
     }
 }
 
 @media (min-width: 992px) {
-    .user-avatar {
+    .group-avatar {
         left: 200px;
     }
 }
 
-.user-intercommunion {
+.about-group {
     display: flex;
     justify-content: center;
-}
-
-.user-intercommunion .subscribe-btn{
-    margin-right: 15px;
-}
-
-.user-intercommunion .write-message-btn{
-    margin-left: 15px;
-}
-
-.about-user {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-}
-
-.account-data {
-    display: flex;
-    justify-content: space-around;
 }
 
 .post-creator-part {
@@ -197,11 +188,11 @@
     margin-bottom: 0px;
 }
 
-.user-post form {
+.group-post form {
     padding-left: 20px;
 }
 
-.user-post form button {
+.group-post form button {
     display: flex;
     justify-content: center;
 }
